# clawpanel-Bl

./: .gitignore  AGENTS.md  Build-v0.6.0.bat  CHANGELOG.md  CONTRIBUTING.md  ClawPanel_v0.6.0_技术文档.md  LICENSE  README.de.md  README.es.md  README.ko.md  README.md  README.pt.md  README.ru.md  README.zh-TW.md  SECURITY.md  UI-PATCH-README.md  add-labels.html  check-bytes.cjs  convert.cjs  convert.js  debug_bg.py  download-models.ps1  fix-chat-final.cjs  fix-chat.cjs  index.html  package-lock.json  package.json  playwright.config.js  revert.py  test-ws.html  test_bg_simple.py
.trae/: tree-sitter-mcp-config.json
.vercel/: project.json
backup_ui_20260404_215150/: chat.css  chat.js  main.js  ui-custom.js
clawpanel-backup_20260403_215031/: CHANGELOG.md  README.fr.md  README.ja.md  README.vi.md  find-chat.cjs  fix-chat2.cjs  fix-encoding.cjs  package-lock.json  package.json  rewrite-chat.cjs
docs/: NOTIFICATION.md  index.html  notification-example.html  split-screen-bug-report.md  trigger-notification.js
docs/update/: latest.json
public/models/: .gitkeep
scripts/: dev-api.js
src/: main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/components/: custom-select.js  modal-select.js  sidebar.js  toast.js  ui-settings-panel.js
src/lib/: error-diagnosis.js  i18n.js  icons.js  message-db.js  model-presets.js  notification-manager.js  tauri-api.js  ui-custom.js  ui-patch.js  window-manager.js  ws-client.js
src/locales/: de.json  en.json  (+11 more)
tests/: multi-window.test.js  split-screen.unit.test.js
(+40 files in other folders)
